err/urlreplacer.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/regex-2015.11.9.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urlreplacer'...
Compiling './lib/python3.5/site-packages/urlreplacer/emails.py'...
***   File "./lib/python3.5/site-packages/urlreplacer/emails.py", line 9
    ur'(?<=^|\s)\b(mailto:)?([^/\s@]+)@([^/\s@]+)\.({})\b'.format(
                                                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/urlreplacer/urls.py'...
***   File "./lib/python3.5/site-packages/urlreplacer/urls.py", line 9
    ur'(?<=^|\s)\b(http(?:s)?://)?([^/\s@]+)\.({})(\b)(\S*?)(?=$|\s|[,!\.\?]([\s]|$))'.format(
                                                                                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/urlreplacer-0.1.1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
